--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -91,3 +91,22 @@
         }
     }
 }
+
+
+// Media
+
+@media (max-width:1200px){
+    
+}
+
+@media (max-width:992px){
+
+}
+
+@media (max-width:768px){
+
+}
+
+@media (max-width:576px){
+
+}
