--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,6 +1,8 @@
 .header {
     &__nav {
-        height: 56px;
+        display: flex;
+        align-items: center;
+        min-height: 56px;
         background: #323232;
 
         .container {
@@ -8,6 +10,7 @@
             justify-content: space-between;
             align-items: center;
             height: 100%;
+            width: 100%;
         }
 
         &-block {
@@ -21,6 +24,7 @@
             padding:0 15px;
             color:#fff;
             text-decoration: none;
+            font-size: 15px;
             &:hover{
                 color:#fff;
             }
@@ -109,6 +113,117 @@
             transition: all .2s;
             &:hover{
                 background:#be9240;
+            }
+        }
+    }
+}
+
+
+// Media
+
+@media (max-width:1200px){
+    .header{
+        .container{
+            margin: 0;
+            width: 100%;
+        }
+        &__nav{
+            padding: 0 20px;
+        }
+        &__content{
+            // padding: 10px 20px 0 20px;
+            padding: 0 20px;
+            display: flex;
+            align-items: center;
+            &-logo{
+                height: unset;
+                width: 152px;
+            }
+        }
+    }
+}
+
+@media (max-width:992px){
+    .header{
+        .container{
+            margin: 0;
+        }
+        &__content{
+            display: flex;
+            align-items: center;
+            &-logo{
+                margin-right: 30px;
+            }
+            &-icon{
+                width: 30px;
+                height: 30px;
+            }
+            &-text{
+                font-size: 14px;
+            }
+        }
+    }
+}
+
+@media (max-width:768px){
+    .header{
+        
+        &__nav{
+            &-btn{
+                width: 125px;
+            }
+            &-link{
+                font-size: 13px;
+            }
+        }
+
+
+        &__content{
+            &-text{
+                margin-right: 20px;
+                font-size: 12px;
+            }
+            &-logo{
+                max-width: 100px;
+                margin-right: 14px;
+            }
+            &-btn{
+                width: 125px;
+            }
+        }
+    }
+}
+
+@media (max-width:576px){
+    .header{
+
+        &__nav{
+            padding: 0 5px;
+            &-link{
+                padding: 0 5px;
+                font-size: 11px;
+            }
+            &-btn{
+                width: 90px;
+                height: 40px;
+            }
+        }
+
+        &__content{
+            padding:0 5px;
+            height: 63px;
+            &-logo{
+                display: none;
+            }
+            &-icon{
+                display: none;
+            }
+            &-btn{
+                width: 90px;
+                height: 40px;
+            }
+            &-text{
+                font-size: 9px;
             }
         }
     }
