--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -96,9 +96,13 @@ select {
   flex:0 0 auto;
 }
 
+.main{
+  background:#000;
+}
+
 .container{
     position: relative;
-    width: 1140px;
+    max-width: 1140px;
     margin: 0 auto;
 }
 
