--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -82,7 +82,6 @@
         }
         &-img{
             width: 93px;
-            height: 29px;
             img{
                 width: 100%;
                 height: 100%;
@@ -95,18 +94,58 @@
 
 // Media
 
-@media (max-width:1200px){
-    
-}
-
-@media (max-width:992px){
-
-}
-
 @media (max-width:768px){
-
+    .footer{
+        &__wrapper{
+            gap:12px;
+        }
+        &__block{
+            &-text, &-title{
+                font-size: 13px;
+            }
+        }
+        &__bottom{
+            &-rights{
+                font-size: 13px;
+            }
+            &-dev{
+                font-size: 12px;
+            }
+            &-img{
+                width: 85px;
+            }
+        }
+    }
 }
 
 @media (max-width:576px){
+    .footer{
+        min-height: 300px;
+        &__wrapper{
+            grid-template-columns: 75px auto auto;
+            grid-template-rows: 140px;
+        }
+        &__block{
+            br{
+                display: none;
+            }
+            &-text,&-title{
+                font-size: 11px;
+            }
+        }
 
+        &__bottom{
+            margin-top: 25px;
+            &-rights{
+                font-size: 9px;
+                margin-right: 10px;
+            }
+            &-dev{
+                font-size: 8px;
+            }
+            &-img{
+                width: 75px;
+            }
+        }
+    }
 }
