added and adaptive sections index page

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -17,7 +17,7 @@
     &__block {
 
         &-title {
-            color: #c99c47;
+            color: $main-color;
             font-size: 14px;
             text-transform: uppercase;
         }
