--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -20,99 +20,105 @@
         &-link {
             display: flex;
             justify-content: center;
-            border-right:1px solid $gray;
-            padding:0 15px;
-            color:#fff;
+            border-right: 1px solid $gray;
+            padding: 0 15px;
+            color: #fff;
             text-decoration: none;
             font-size: 15px;
-            &:hover{
-                color:#fff;
+
+            &:hover {
+                color: #fff;
             }
-            &:first-child{
+
+            &:first-child {
                 padding-left: 0;
             }
-            &:last-child{
-                border:none;
+
+            &:last-child {
+                border: none;
             }
         }
 
-        &-btn{
+        &-btn {
             width: 153px;
             height: 38px;
-            background:#e8d8b6;
+            background: #e8d8b6;
             text-transform: uppercase;
             font-size: 12px;
-            color:#323232;
+            color: #323232;
             transition: all .2s;
-            border:none;
+            border: none;
             cursor: pointer;
-            &:hover{
-                background:#e4d1a8;
-                color:#000;
+
+            &:hover {
+                background: #e4d1a8;
+                color: #000;
             }
         }
     }
 
 
-    &__content{
+    &__content {
         height: 93px;
         padding-top: 15px;
 
-        &-wrapper{
+        &-wrapper {
             display: flex;
             align-items: center;
             justify-content: space-between;
         }
 
-        &-block{
+        &-block {
             display: flex;
         }
 
-        &-logo{
+        &-logo {
             width: 170px;
             height: 65px;
             margin-right: 44px;
-            img{
+
+            img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
             }
         }
 
-        &-link{
+        &-link {
             display: flex;
             align-items: center;
-            gap:12px;
+            gap: 12px;
         }
 
-        &-text{
+        &-text {
             margin-right: 33px;
             text-transform: uppercase;
             font-size: 15px;
-            color:#323232;
+            color: #323232;
         }
 
-        &-icon{
+        &-icon {
             display: flex;
-            align-items:center;
+            align-items: center;
             justify-content: center;
-            border:1px solid #000;
+            border: 1px solid #000;
             width: 37px;
             height: 37px;
         }
 
-        &-btn{
+        &-btn {
             width: 153px;
             height: 38px;
-            background:#c99c47;
+            background: $main-color;
             text-transform: uppercase;
             font-size: 13px;
-            color:#fff;
-            border:none;
+            color: #fff;
+            border: none;
             cursor: pointer;
             transition: all .2s;
-            &:hover{
-                background:#be9240;
+
+            &:hover {
+                background: #be9240;
             }
         }
     }
@@ -121,21 +127,23 @@
 
 // Media
 
-@media (max-width:1200px){
+@media (max-width:1200px) {
 
-    .container{
+    .container {
         padding: 0 5px;
     }
 
-    .header{
-        .container{
+    .header {
+        .container {
             margin: 0;
             width: 100%;
         }
-        &__content{
+
+        &__content {
             display: flex;
             align-items: center;
-            &-logo{
+
+            &-logo {
                 height: unset;
                 width: 152px;
             }
@@ -143,86 +151,101 @@
     }
 }
 
-@media (max-width:992px){
-    .header{
-        .container{
+@media (max-width:992px) {
+    .header {
+        .container {
             margin: 0;
         }
-        &__content{
+
+        &__content {
             display: flex;
             align-items: center;
-            &-logo{
+
+            &-logo {
                 margin-right: 30px;
             }
-            &-icon{
+
+            &-icon {
                 width: 30px;
                 height: 30px;
             }
-            &-text{
+
+            &-text {
                 font-size: 14px;
             }
         }
     }
 }
 
-@media (max-width:768px){
-    .header{
-        
-        &__nav{
-            &-btn{
+@media (max-width:768px) {
+    .header {
+
+        &__nav {
+            &-btn {
                 width: 125px;
             }
-            &-link{
+
+            &-link {
                 font-size: 13px;
             }
         }
 
 
-        &__content{
-            &-text{
+        &__content {
+            &-text {
                 margin-right: 20px;
                 font-size: 12px;
             }
-            &-logo{
+
+            &-logo {
                 max-width: 100px;
                 margin-right: 14px;
             }
-            &-btn{
+
+            &-btn {
                 width: 125px;
             }
         }
     }
 }
 
-@media (max-width:576px){
-    .header{
+@media (max-width:576px) {
+    .header {
 
-        &__nav{
+        &__nav {
             padding: 0 5px;
-            &-link{
+
+            &-link {
                 padding: 0 5px;
                 font-size: 11px;
             }
-            &-btn{
-                width: 90px;
-                height: 40px;
+
+            &-btn {
+                font-size: 10px;
+                width: 75px;
+                height: 32px;
             }
         }
 
-        &__content{
-            padding:0 5px;
+        &__content {
+            padding: 0 5px;
             height: 63px;
-            &-logo{
+
+            &-logo {
                 display: none;
             }
-            &-icon{
+
+            &-icon {
                 display: none;
             }
-            &-btn{
-                width: 90px;
-                height: 40px;
+
+            &-btn {
+                font-size: 10px;
+                width: 100px;
+                height: 32px;
             }
-            &-text{
+
+            &-text {
                 font-size: 9px;
             }
         }
