--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import 'base/variables';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
 /* Указываем box sizing */
 *,
@@ -96,17 +97,17 @@ select {
   flex:0 0 auto;
 }
 
-.main{
-  background:#000;
-}
-
 .container{
     position: relative;
     max-width: 1140px;
     margin: 0 auto;
 }
 
-@import 'base/variables.scss';
 
 @import 'header.scss';
 @import 'footer.scss';
+@import 'pages/index/wealth/wealth.scss';
+@import 'pages/index/register/register.scss';
+
+@import 'pages/index/wealth/wealth-media.scss';
+@import 'pages/index/register/register-media.scss';
