added and adaptived reviews, video, clients sections

--- a/src/sass/pages/index/register/_register.scss
+++ b/src/sass/pages/index/register/_register.scss
@@ -76,6 +76,7 @@
             font-size: 13px;
             text-transform: uppercase;
             border:none;
+            cursor: pointer;
             &-black{
                 background:#323232;
             }
